gestion modification exo2

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <p>hello</p>
+    <p>Bonjour</p>
+    <h1>Ceci est le premier TP</h1>
   </body>
 </html>
