modification du h1 de index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <p>Bonjour</p>
-    <h1>Ceci est le premier TP</h1>
+    <h1>Modification du h1 depuis la branche main</h1>
   </body>
 </html>
